# mini-bank

./: .gitignore  CMakeLists.txt  README.md  account.h  bank.h  bank.sln  bank.vcxproj  bank.vcxproj.filters  main.cpp  main_console.cpp  validation.h
bank/x64/Debug/: bank.exe.recipe  bank.ilk  vc143.idb
bank/x64/Debug/bank.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  bank.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
core/: account.h  bank.h  validation.h
ui/: mainwindow.cpp  mainwindow.h
